--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/signin">Inscriptions</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/service">Les services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/observable">Les observables</a>
+      </li>
     </ul>
   </nav>
 
