observable + debut parameters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/observable">Les observables</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/parameters">Les paramètres d'url</a>
+      </li>
     </ul>
   </nav>
 
