--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/parameters">Les paramètres d'url</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/authentication">Connexion</a>
+      </li>
     </ul>
   </nav>
 
