--- a/src/app/components/authentication/authentication.component.html
+++ b/src/app/components/authentication/authentication.component.html
@@ -1,6 +1,8 @@
 
 <h2>Authentication</h2>
 
+<p class="small">https://blog.angular-university.io/angular-jwt-authentication/</p>
+
 <button class="btn btn-outline-primary" (click)="logIn()" *ngIf="!state; else logOutBlock">Connexion</button>
 
 <ng-template #logOutBlock>
