--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/authentication">Connexion</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/http">HTTP</a>
+      </li>
     </ul>
   </nav>
 
